// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Strawhenge Wall Construction > Wall Length Snapshots - startAtEnd=false > should produce consistent layout for length 499 > wall-length-499-startAtEnd-false 1`] = `
[
  {
    "material": "infill",
    "position_x": 0,
    "size_x": 499,
  },
]
`;

exports[`Strawhenge Wall Construction > Wall Length Snapshots - startAtEnd=false > should produce consistent layout for length 500 > wall-length-500-startAtEnd-false 1`] = `
[
  {
    "material": "module",
    "position_x": 0,
    "size_x": 500,
  },
]
`;

exports[`Strawhenge Wall Construction > Wall Length Snapshots - startAtEnd=false > should produce consistent layout for length 501 > wall-length-501-startAtEnd-false 1`] = `
[
  {
    "material": "infill",
    "position_x": 0,
    "size_x": 501,
  },
]
`;

exports[`Strawhenge Wall Construction > Wall Length Snapshots - startAtEnd=false > should produce consistent layout for length 600 > wall-length-600-startAtEnd-false 1`] = `
[
  {
    "material": "infill",
    "position_x": 0,
    "size_x": 600,
  },
]
`;

exports[`Strawhenge Wall Construction > Wall Length Snapshots - startAtEnd=false > should produce consistent layout for length 609 > wall-length-609-startAtEnd-false 1`] = `
[
  {
    "material": "infill",
    "position_x": 0,
    "size_x": 609,
  },
]
`;

exports[`Strawhenge Wall Construction > Wall Length Snapshots - startAtEnd=false > should produce consistent layout for length 610 > wall-length-610-startAtEnd-false 1`] = `
[
  {
    "material": "module",
    "position_x": 0,
    "size_x": 500,
  },
  {
    "material": "infill",
    "position_x": 500,
    "size_x": 110,
  },
]
`;

exports[`Strawhenge Wall Construction > Wall Length Snapshots - startAtEnd=false > should produce consistent layout for length 1099 > wall-length-1099-startAtEnd-false 1`] = `
[
  {
    "material": "module",
    "position_x": 0,
    "size_x": 500,
  },
  {
    "material": "infill",
    "position_x": 500,
    "size_x": 599,
  },
]
`;

exports[`Strawhenge Wall Construction > Wall Length Snapshots - startAtEnd=false > should produce consistent layout for length 1100 > wall-length-1100-startAtEnd-false 1`] = `
[
  {
    "material": "module",
    "position_x": 0,
    "size_x": 500,
  },
  {
    "material": "straw",
    "position_x": 500,
    "size_x": 100,
  },
  {
    "material": "module",
    "position_x": 600,
    "size_x": 500,
  },
]
`;

exports[`Strawhenge Wall Construction > Wall Length Snapshots - startAtEnd=false > should produce consistent layout for length 1400 > wall-length-1400-startAtEnd-false 1`] = `
[
  {
    "material": "module",
    "position_x": 0,
    "size_x": 500,
  },
  {
    "material": "straw",
    "position_x": 500,
    "size_x": 400,
  },
  {
    "material": "module",
    "position_x": 900,
    "size_x": 500,
  },
]
`;

exports[`Strawhenge Wall Construction > Wall Length Snapshots - startAtEnd=false > should produce consistent layout for length 1401 > wall-length-1401-startAtEnd-false 1`] = `
[
  {
    "material": "module",
    "position_x": 0,
    "size_x": 500,
  },
  {
    "material": "straw",
    "position_x": 500,
    "size_x": 401,
  },
  {
    "material": "module",
    "position_x": 901,
    "size_x": 500,
  },
]
`;

exports[`Strawhenge Wall Construction > Wall Length Snapshots - startAtEnd=false > should produce consistent layout for length 1499 > wall-length-1499-startAtEnd-false 1`] = `
[
  {
    "material": "module",
    "position_x": 0,
    "size_x": 500,
  },
  {
    "material": "straw",
    "position_x": 500,
    "size_x": 499,
  },
  {
    "material": "module",
    "position_x": 999,
    "size_x": 500,
  },
]
`;

exports[`Strawhenge Wall Construction > Wall Length Snapshots - startAtEnd=false > should produce consistent layout for length 1500 > wall-length-1500-startAtEnd-false 1`] = `
[
  {
    "material": "module",
    "position_x": 0,
    "size_x": 500,
  },
  {
    "material": "module",
    "position_x": 500,
    "size_x": 500,
  },
  {
    "material": "module",
    "position_x": 1000,
    "size_x": 500,
  },
]
`;

exports[`Strawhenge Wall Construction > Wall Length Snapshots - startAtEnd=false > should produce consistent layout for length 1501 > wall-length-1501-startAtEnd-false 1`] = `
[
  {
    "material": "module",
    "position_x": 0,
    "size_x": 500,
  },
  {
    "material": "infill",
    "position_x": 500,
    "size_x": 501,
  },
  {
    "material": "module",
    "position_x": 1001,
    "size_x": 500,
  },
]
`;

exports[`Strawhenge Wall Construction > Wall Length Snapshots - startAtEnd=false > should produce consistent layout for length 1599 > wall-length-1599-startAtEnd-false 1`] = `
[
  {
    "material": "module",
    "position_x": 0,
    "size_x": 500,
  },
  {
    "material": "infill",
    "position_x": 500,
    "size_x": 599,
  },
  {
    "material": "module",
    "position_x": 1099,
    "size_x": 500,
  },
]
`;

exports[`Strawhenge Wall Construction > Wall Length Snapshots - startAtEnd=false > should produce consistent layout for length 1600 > wall-length-1600-startAtEnd-false 1`] = `
[
  {
    "material": "module",
    "position_x": 0,
    "size_x": 500,
  },
  {
    "material": "straw",
    "position_x": 500,
    "size_x": 100,
  },
  {
    "material": "module",
    "position_x": 600,
    "size_x": 500,
  },
  {
    "material": "module",
    "position_x": 1100,
    "size_x": 500,
  },
]
`;

exports[`Strawhenge Wall Construction > Wall Length Snapshots - startAtEnd=false > should produce consistent layout for length 1900 > wall-length-1900-startAtEnd-false 1`] = `
[
  {
    "material": "module",
    "position_x": 0,
    "size_x": 500,
  },
  {
    "material": "straw",
    "position_x": 500,
    "size_x": 400,
  },
  {
    "material": "module",
    "position_x": 900,
    "size_x": 500,
  },
  {
    "material": "module",
    "position_x": 1400,
    "size_x": 500,
  },
]
`;

exports[`Strawhenge Wall Construction > Wall Length Snapshots - startAtEnd=false > should produce consistent layout for length 1901 > wall-length-1901-startAtEnd-false 1`] = `
[
  {
    "material": "module",
    "position_x": 0,
    "size_x": 500,
  },
  {
    "material": "straw",
    "position_x": 500,
    "size_x": 301,
  },
  {
    "material": "module",
    "position_x": 801,
    "size_x": 500,
  },
  {
    "material": "straw",
    "position_x": 1301,
    "size_x": 100,
  },
  {
    "material": "module",
    "position_x": 1401,
    "size_x": 500,
  },
]
`;

exports[`Strawhenge Wall Construction > Wall Length Snapshots - startAtEnd=false > should produce consistent layout for length 2300 > wall-length-2300-startAtEnd-false 1`] = `
[
  {
    "material": "module",
    "position_x": 0,
    "size_x": 500,
  },
  {
    "material": "straw",
    "position_x": 500,
    "size_x": 400,
  },
  {
    "material": "module",
    "position_x": 900,
    "size_x": 500,
  },
  {
    "material": "straw",
    "position_x": 1400,
    "size_x": 400,
  },
  {
    "material": "module",
    "position_x": 1800,
    "size_x": 500,
  },
]
`;

exports[`Strawhenge Wall Construction > Wall Length Snapshots - startAtEnd=false > should produce consistent layout for length 2301 > wall-length-2301-startAtEnd-false 1`] = `
[
  {
    "material": "module",
    "position_x": 0,
    "size_x": 500,
  },
  {
    "material": "straw",
    "position_x": 500,
    "size_x": 400,
  },
  {
    "material": "module",
    "position_x": 900,
    "size_x": 500,
  },
  {
    "material": "straw",
    "position_x": 1400,
    "size_x": 401,
  },
  {
    "material": "module",
    "position_x": 1801,
    "size_x": 500,
  },
]
`;

exports[`Strawhenge Wall Construction > Wall Length Snapshots - startAtEnd=false > should produce consistent layout for length 3200 > wall-length-3200-startAtEnd-false 1`] = `
[
  {
    "material": "module",
    "position_x": 0,
    "size_x": 500,
  },
  {
    "material": "straw",
    "position_x": 500,
    "size_x": 400,
  },
  {
    "material": "module",
    "position_x": 900,
    "size_x": 500,
  },
  {
    "material": "straw",
    "position_x": 1400,
    "size_x": 400,
  },
  {
    "material": "module",
    "position_x": 1800,
    "size_x": 500,
  },
  {
    "material": "straw",
    "position_x": 2300,
    "size_x": 400,
  },
  {
    "material": "module",
    "position_x": 2700,
    "size_x": 500,
  },
]
`;

exports[`Strawhenge Wall Construction > Wall Length Snapshots - startAtEnd=true > should produce consistent layout for length 499 > wall-length-499-startAtEnd-true 1`] = `
[
  {
    "material": "infill",
    "position_x": 0,
    "size_x": 499,
  },
]
`;

exports[`Strawhenge Wall Construction > Wall Length Snapshots - startAtEnd=true > should produce consistent layout for length 500 > wall-length-500-startAtEnd-true 1`] = `
[
  {
    "material": "module",
    "position_x": 0,
    "size_x": 500,
  },
]
`;

exports[`Strawhenge Wall Construction > Wall Length Snapshots - startAtEnd=true > should produce consistent layout for length 501 > wall-length-501-startAtEnd-true 1`] = `
[
  {
    "material": "infill",
    "position_x": 0,
    "size_x": 501,
  },
]
`;

exports[`Strawhenge Wall Construction > Wall Length Snapshots - startAtEnd=true > should produce consistent layout for length 600 > wall-length-600-startAtEnd-true 1`] = `
[
  {
    "material": "infill",
    "position_x": 0,
    "size_x": 600,
  },
]
`;

exports[`Strawhenge Wall Construction > Wall Length Snapshots - startAtEnd=true > should produce consistent layout for length 609 > wall-length-609-startAtEnd-true 1`] = `
[
  {
    "material": "infill",
    "position_x": 0,
    "size_x": 609,
  },
]
`;

exports[`Strawhenge Wall Construction > Wall Length Snapshots - startAtEnd=true > should produce consistent layout for length 610 > wall-length-610-startAtEnd-true 1`] = `
[
  {
    "material": "infill",
    "position_x": 0,
    "size_x": 110,
  },
  {
    "material": "module",
    "position_x": 110,
    "size_x": 500,
  },
]
`;

exports[`Strawhenge Wall Construction > Wall Length Snapshots - startAtEnd=true > should produce consistent layout for length 1099 > wall-length-1099-startAtEnd-true 1`] = `
[
  {
    "material": "infill",
    "position_x": 0,
    "size_x": 599,
  },
  {
    "material": "module",
    "position_x": 599,
    "size_x": 500,
  },
]
`;

exports[`Strawhenge Wall Construction > Wall Length Snapshots - startAtEnd=true > should produce consistent layout for length 1100 > wall-length-1100-startAtEnd-true 1`] = `
[
  {
    "material": "module",
    "position_x": 0,
    "size_x": 500,
  },
  {
    "material": "straw",
    "position_x": 500,
    "size_x": 100,
  },
  {
    "material": "module",
    "position_x": 600,
    "size_x": 500,
  },
]
`;

exports[`Strawhenge Wall Construction > Wall Length Snapshots - startAtEnd=true > should produce consistent layout for length 1400 > wall-length-1400-startAtEnd-true 1`] = `
[
  {
    "material": "module",
    "position_x": 0,
    "size_x": 500,
  },
  {
    "material": "straw",
    "position_x": 500,
    "size_x": 400,
  },
  {
    "material": "module",
    "position_x": 900,
    "size_x": 500,
  },
]
`;

exports[`Strawhenge Wall Construction > Wall Length Snapshots - startAtEnd=true > should produce consistent layout for length 1401 > wall-length-1401-startAtEnd-true 1`] = `
[
  {
    "material": "module",
    "position_x": 0,
    "size_x": 500,
  },
  {
    "material": "straw",
    "position_x": 500,
    "size_x": 401,
  },
  {
    "material": "module",
    "position_x": 901,
    "size_x": 500,
  },
]
`;

exports[`Strawhenge Wall Construction > Wall Length Snapshots - startAtEnd=true > should produce consistent layout for length 1499 > wall-length-1499-startAtEnd-true 1`] = `
[
  {
    "material": "module",
    "position_x": 0,
    "size_x": 500,
  },
  {
    "material": "straw",
    "position_x": 500,
    "size_x": 499,
  },
  {
    "material": "module",
    "position_x": 999,
    "size_x": 500,
  },
]
`;

exports[`Strawhenge Wall Construction > Wall Length Snapshots - startAtEnd=true > should produce consistent layout for length 1500 > wall-length-1500-startAtEnd-true 1`] = `
[
  {
    "material": "module",
    "position_x": 0,
    "size_x": 500,
  },
  {
    "material": "module",
    "position_x": 500,
    "size_x": 500,
  },
  {
    "material": "module",
    "position_x": 1000,
    "size_x": 500,
  },
]
`;

exports[`Strawhenge Wall Construction > Wall Length Snapshots - startAtEnd=true > should produce consistent layout for length 1501 > wall-length-1501-startAtEnd-true 1`] = `
[
  {
    "material": "module",
    "position_x": 0,
    "size_x": 500,
  },
  {
    "material": "infill",
    "position_x": 500,
    "size_x": 501,
  },
  {
    "material": "module",
    "position_x": 1001,
    "size_x": 500,
  },
]
`;

exports[`Strawhenge Wall Construction > Wall Length Snapshots - startAtEnd=true > should produce consistent layout for length 1599 > wall-length-1599-startAtEnd-true 1`] = `
[
  {
    "material": "module",
    "position_x": 0,
    "size_x": 500,
  },
  {
    "material": "infill",
    "position_x": 500,
    "size_x": 599,
  },
  {
    "material": "module",
    "position_x": 1099,
    "size_x": 500,
  },
]
`;

exports[`Strawhenge Wall Construction > Wall Length Snapshots - startAtEnd=true > should produce consistent layout for length 1600 > wall-length-1600-startAtEnd-true 1`] = `
[
  {
    "material": "module",
    "position_x": 0,
    "size_x": 500,
  },
  {
    "material": "module",
    "position_x": 500,
    "size_x": 500,
  },
  {
    "material": "straw",
    "position_x": 1000,
    "size_x": 100,
  },
  {
    "material": "module",
    "position_x": 1100,
    "size_x": 500,
  },
]
`;

exports[`Strawhenge Wall Construction > Wall Length Snapshots - startAtEnd=true > should produce consistent layout for length 1900 > wall-length-1900-startAtEnd-true 1`] = `
[
  {
    "material": "module",
    "position_x": 0,
    "size_x": 500,
  },
  {
    "material": "module",
    "position_x": 500,
    "size_x": 500,
  },
  {
    "material": "straw",
    "position_x": 1000,
    "size_x": 400,
  },
  {
    "material": "module",
    "position_x": 1400,
    "size_x": 500,
  },
]
`;

exports[`Strawhenge Wall Construction > Wall Length Snapshots - startAtEnd=true > should produce consistent layout for length 1901 > wall-length-1901-startAtEnd-true 1`] = `
[
  {
    "material": "module",
    "position_x": 0,
    "size_x": 500,
  },
  {
    "material": "straw",
    "position_x": 500,
    "size_x": 100,
  },
  {
    "material": "module",
    "position_x": 600,
    "size_x": 500,
  },
  {
    "material": "straw",
    "position_x": 1100,
    "size_x": 301,
  },
  {
    "material": "module",
    "position_x": 1401,
    "size_x": 500,
  },
]
`;

exports[`Strawhenge Wall Construction > Wall Length Snapshots - startAtEnd=true > should produce consistent layout for length 2300 > wall-length-2300-startAtEnd-true 1`] = `
[
  {
    "material": "module",
    "position_x": 0,
    "size_x": 500,
  },
  {
    "material": "straw",
    "position_x": 500,
    "size_x": 400,
  },
  {
    "material": "module",
    "position_x": 900,
    "size_x": 500,
  },
  {
    "material": "straw",
    "position_x": 1400,
    "size_x": 400,
  },
  {
    "material": "module",
    "position_x": 1800,
    "size_x": 500,
  },
]
`;

exports[`Strawhenge Wall Construction > Wall Length Snapshots - startAtEnd=true > should produce consistent layout for length 2301 > wall-length-2301-startAtEnd-true 1`] = `
[
  {
    "material": "module",
    "position_x": 0,
    "size_x": 500,
  },
  {
    "material": "straw",
    "position_x": 500,
    "size_x": 401,
  },
  {
    "material": "module",
    "position_x": 901,
    "size_x": 500,
  },
  {
    "material": "straw",
    "position_x": 1401,
    "size_x": 400,
  },
  {
    "material": "module",
    "position_x": 1801,
    "size_x": 500,
  },
]
`;

exports[`Strawhenge Wall Construction > Wall Length Snapshots - startAtEnd=true > should produce consistent layout for length 3200 > wall-length-3200-startAtEnd-true 1`] = `
[
  {
    "material": "module",
    "position_x": 0,
    "size_x": 500,
  },
  {
    "material": "straw",
    "position_x": 500,
    "size_x": 400,
  },
  {
    "material": "module",
    "position_x": 900,
    "size_x": 500,
  },
  {
    "material": "straw",
    "position_x": 1400,
    "size_x": 400,
  },
  {
    "material": "module",
    "position_x": 1800,
    "size_x": 500,
  },
  {
    "material": "straw",
    "position_x": 2300,
    "size_x": 400,
  },
  {
    "material": "module",
    "position_x": 2700,
    "size_x": 500,
  },
]
`;
